make the links clickable

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <div class="right">
             <div class="links">
-                <a id="link" href="#" title="LinkedIn">LinkedIn</a>
-                <a id="leet" href="#" title="LeetCode">LeetCode</a>
-                <a id="git" href="#" title="GitHub">GitHub</a>
+                <a id="link" href="https://www.linkedin.com/in/nekalsingh" title="LinkedIn" target="_blank">LinkedIn</a>
+                <a id="leet" href="https://leetcode.com/u/nekalsingh987/" title="LeetCode" target="_blank">LeetCode</a>
+                <a id="git" href="https://github.com/nekalsalaria" title="GitHub" target="_blank">GitHub</a>
             </div>
         </div>
     </div>
