remove resume button

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
             <div class="email">
                 <h4 id="em">nekalsingh987@gmail.com</h4>
             </div>
-            <div class="button" id="btn">
-                <button id="bt" onclick="window.open('Resume.pdf', '_blank')">Resume</button>
-            </div>
         </div>
         <div class="right">
             <div class="links">
                 <a id="link" href="https://www.linkedin.com/in/nekalsingh" title="LinkedIn" target="_blank">LinkedIn</a>
-                <a id="leet" href="https://leetcode.com/u/nekalsingh987/" title="LeetCode" target="_blank">LeetCode</a>
+                <a id="leet" href="" title="LeetCode" target="_blank">LeetCode</a>
                 <a id="git" href="https://github.com/nekalsalaria" title="GitHub" target="_blank">GitHub</a>
             </div>
         </div>
