--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="main">
         <div class="pic">
-            <img src="profile.jpg.jpg" alt="Profile Picture">
+            <img src="profileimg.jpeg" alt="Profile Picture">
         </div>
         <div class="text">
             <h1 id="tex" class="animated-text">Transform Ideas into Websites</h1>
