--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="text">
             <h1>Hire me!!</h1>
             <div class="button">
-                <button id="emi" onclick="openEmailClient()">Email</button>
+                <button id="emi" onclick="window.location.href='mailto:nekalsingh987@gmail.com'">Email</button>
                 <button id="wh" onclick="window.open('https://wa.me/9682343120', '_blank')">WhatsApp</button>
             </div>
         </div>
@@ -102,9 +102,7 @@
     </footer>
 
     <script>
-        function openEmailClient() {
-            window.location.href = "mailto:nekalsingh987@gmail.com";
-        }
+        
 
         // Text animation
         let text = document.querySelector('.animated-text');
